--- a/dog-app/index.html
+++ b/dog-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-[url(./assets/dogs.jpeg)] bg-repeat bg-cover  ">
+<html lang="en" class="bg-[url(./assets/dogs.jpeg)] bg-center bg-cover w-screen h-screen ">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
